--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "devto-clone",
+  "homepage": "https://pranjalshikhar.github.io/devto-clone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
